--- a/Caeser-cipher-ROT1-25/Caeser-cipher-ROT1-25.vcxproj
+++ b/Caeser-cipher-ROT1-25/Caeser-cipher-ROT1-25.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{B222719E-0778-47BE-853F-F308B9C0B15F}</ProjectGuid>
-    <RootNamespace>CaesarcipherROT126</RootNamespace>
+    <ProjectGuid>{F234490A-749A-4656-B025-D682EAF2E046}</ProjectGuid>
+    <RootNamespace>CaesercipherROT125</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -118,7 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Saeser.cpp" />
   </ItemGroup>
   <ItemGroup>
